got issue sync working
